--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "daniel.santos.ap@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-main",
     "require": {},
     "autoload": {
             "psr-4": {
